# digital-daguerreotype

./: .gitignore  CMakeLists.txt  LICENSE  README.md  digital-daguerreotype.sln  digital-daguerreotype.vcxproj  digital-daguerreotype.vcxproj.filters  dithering.cpp  gcode.cpp  gcode.h  main.cpp  rgb2tsp.cpp  rgb2tsp.h  rgb2tsp.hpp  texture.h  tsp.cpp  tsp.hpp
3Dmodels/: Digital Daguerreotype.scad  camera bracket.stl  faceplate.stl
